# cpp_start

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  main.cxx  vcpkg.json  world_pop_gdp.csv
